--- a/package.json
+++ b/package.json
@@ -1,35 +1,45 @@
 {
-  "name": "table-api",
+  "name": "cms_api",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
     "start:dev": "nodemon src/index.js",
-    "db:up": "node src/database/scripts/dbUp.js",
-    "db:down": "node src/database/scripts/dbDown.js",
-    "tables:up": "node src/database/scripts/tablesUp.js",
-    "db:init": "npm run db:up && npm run tables:up",
-    "seed": "node src/database/scripts/seed.js"
+    "db:table": "node src/database/modelDB.js",
+    "cms_init": "node src/config/cms.init.js",
+    "db:up": "node src/database/dbUp.js",
+    "db:down": "node src/database/dbDrop.js",
+    "db:update": "node src/database/dbUpdateTable.js",
+    "db:test": "node src/database/test.js",
+    "db:init": "npm run db:up && npm run db:table",
+    "seed": "node src/database/seedDB.js",
+    "seedUser": "node src/database/seedUsers.js",
+    "format": "prettier --write \"src/**/*.js\" \"src/**/*.jsx\" \"src/**/*.ts\" \"src/**/*.tsx\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@faker-js/faker": "^7.6.0",
+    "@faker-js/faker": "^8.0.2",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "morgan": "^1.10.0",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.5.0",
+    "sequelize": "^6.32.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "eslint": "^8.46.0",
     "nodemon": "^2.0.16",
+    "prettier": "^3.0.1",
     "winston": "^3.7.2"
   }
 }
