--- a/.env
+++ b/.env
@@ -7,5 +7,5 @@ JWT_REFRESH_SECRET=jwtsecret
 JWT_ACCESS_SECRET=JWT_ACCESS_SECRET
 ADMIN_LOGIN=admin
 ADMIN_PASS=123
-CLIENT_URL=https://gwvwl.site/
+CLIENT_URL=https://gwvwl.site
 HOST_APP=https://api.gwvwl.site/
