--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 DB_HOST=localhost
 PORT=8080
-DB_USER=gvl328_gvl322	
-DB_PASS=p.Q.(v6@uYrt
-DB_NAME=gvl328_cms
+DB_USER=gvl956_gvl328
+DB_PASS=;NRg6u8v0?80
+DB_NAME=gvl956_ryba
 JWT_REFRESH_SECRET=jwtsecret
 JWT_ACCESS_SECRET=JWT_ACCESS_SECRET
 ADMIN_LOGIN=admin
-ADMIN_PASS=123
-CLIENT_URL=https://gwvwl.site
-HOST_APP=https://api.gwvwl.site/
+ADMIN_PASS=loh
+CLIENT_URL=https://basegone.site/
+HOST_APP=https://basegone.api.site/
