--- a/.env
+++ b/.env
@@ -7,5 +7,5 @@ JWT_REFRESH_SECRET=jwtsecret
 JWT_ACCESS_SECRET=JWT_ACCESS_SECRET
 ADMIN_LOGIN=admin
 ADMIN_PASS=loh
-CLIENT_URL=https://basegone.site/
+CLIENT_URL=https://basegone.site
 HOST_APP=https://basegone.api.site/
