--- a/.env
+++ b/.env
@@ -8,4 +8,4 @@ JWT_ACCESS_SECRET=JWT_ACCESS_SECRET
 ADMIN_LOGIN=admin
 ADMIN_PASS=loh
 CLIENT_URL=https://basegone.site
-HOST_APP=https://basegone.api.site/
+HOST_APP=https://api.basegone.site/
