--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DB_HOST=localhost
 PORT=8080
 DB_USER=gvl956_gvl328
-DB_PASS=;NRg6u8v0?80
+DB_PASS=gh&5oQ%Hk(Nq
 DB_NAME=gvl956_ryba
 JWT_REFRESH_SECRET=jwtsecret
 JWT_ACCESS_SECRET=JWT_ACCESS_SECRET
