--- a/.env.dev
+++ b/.env.dev
@@ -1,11 +1,11 @@
 DB_HOST=localhost
 PORT=8080
-DB_USER=gvl328_gvl322	
-DB_PASS=p.Q.(v6@uYrt
-DB_NAME=gvl328_cms
+DB_USER=root	
+DB_PASS=12345678
+DB_NAME=ryba
 JWT_REFRESH_SECRET=jwtsecret
 JWT_ACCESS_SECRET=JWT_ACCESS_SECRET
 ADMIN_LOGIN=admin
 ADMIN_PASS=123
-CLIENT_URL=https://gwvwl.site
+CLIENT_URL=http://localhost:3000
 HOST_APP=https://api.gwvwl.site/
