--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 DB_HOST=localhost
 PORT=8080
-DB_USER=gvl956_gvl328
-DB_PASS=gh&5oQ%Hk(Nq
-DB_NAME=gvl956_ryba
+DB_USER=gvl956_new
+DB_PASS=saa2wTpK%Mo,
+DB_NAME=gvl956_new
 JWT_REFRESH_SECRET=jwtsecret
 JWT_ACCESS_SECRET=JWT_ACCESS_SECRET
 ADMIN_LOGIN=admin
