--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DB_HOST=localhost
 PORT=8080
-DB_USER=gvl956_new
-DB_PASS=saa2wTpK%Mo,
+DB_USER=gvl956_gvl328
+DB_PASS=c1T]M&u;-44C
 DB_NAME=gvl956_new
 JWT_REFRESH_SECRET=jwtsecret
 JWT_ACCESS_SECRET=JWT_ACCESS_SECRET
