--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "db:test": "node src/database/test.js",
     "db:init": "npm run db:up && npm run db:table",
     "seed": "node src/database/seed.js",
+    "change": "node src/database/change.js",
     "seedUser": "node src/database/seedUsers.js",
     "format": "prettier --write \"src/**/*.js\" \"src/**/*.jsx\" \"src/**/*.ts\" \"src/**/*.tsx\""
   },
